--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Pirmasis projektas apie JS",
   "main": "index.js",
   "scripts": {
+    "array": "node --watch ./js/6-array.js",
  "uzduotis": "node --watch ./js/uzduotis.js", 
     "if": "node --watch ./js/5-if.js",
    "boolean": "node --watch ./js/4-boolean.js",
