--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Pirmasis projektas apie JS",
   "main": "index.js",
   "scripts": {
-   "typeof": "node --watch ./js/7-typeof.js",
+   "for": "node --watch ./js/8-for.js",
+    "typeof": "node --watch ./js/7-typeof.js",
     "array": "node --watch ./js/6-array.js",
  "uzduotis": "node --watch ./js/uzduotis.js", 
     "if": "node --watch ./js/5-if.js",
@@ -16,7 +17,10 @@
      "adult": "node --watch ./task/adult.js",
      "marks-average": "node --watch ./task/marks-average.js",
      "multiply": "node --watch ./task/multiply.js",
+     "multi-table": "node --watch ./task/multi-table.js",
+     "interval-sum": "node --watch ./task/interval-sum.js",
      "text-size": "node --watch ./task/text-size.js",
+    "simple-calculator": "node --watch ./codewars/simple-calculator.js",
      "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
