--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Pirmasis projektas apie JS",
   "main": "index.js",
   "scripts": {
-   "for": "node --watch ./js/8-for.js",
+   "object": "node --watch ./js/9-object.js",
+    "for": "node --watch ./js/8-for.js",
     "typeof": "node --watch ./js/7-typeof.js",
     "array": "node --watch ./js/6-array.js",
  "uzduotis": "node --watch ./js/uzduotis.js", 
@@ -14,7 +15,11 @@
         "string": "node --watch ./js/2-string.js",
         "number": "node --watch ./js/1-number.js",
         "js": "node --watch ./index.js",  
-     "adult": "node --watch ./task/adult.js",
+   "biggest-number": "node --watch ./task/biggest-number.js",
+        "string-reverse": "node --watch ./task/string-reverse.js",
+        "interval-count": "node --watch ./task/interval-count.js",
+        "adult": "node --watch ./task/adult.js",
+    "digit-count": "node --watch ./task/digit-count.js",
      "marks-average": "node --watch ./task/marks-average.js",
      "multiply": "node --watch ./task/multiply.js",
      "multi-table": "node --watch ./task/multi-table.js",
