--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Pirmasis projektas apie JS",
   "main": "index.js",
   "scripts": {
-   "object": "node --watch ./js/9-object.js",
+ "method-string": "node --watch ./js/11-method-string.js",
+    "math": "node --watch ./js/10-math.js",
+    "object": "node --watch ./js/9-object.js",
     "for": "node --watch ./js/8-for.js",
     "typeof": "node --watch ./js/7-typeof.js",
     "array": "node --watch ./js/6-array.js",
