--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Pirmasis projektas apie JS",
   "main": "index.js",
   "scripts": {
- "method-string": "node --watch ./js/11-method-string.js",
+ "Nd":"node --watch ./js/99-ND.js",
+    "method-string": "node --watch ./js/11-method-string.js",
     "math": "node --watch ./js/10-math.js",
     "object": "node --watch ./js/9-object.js",
     "for": "node --watch ./js/8-for.js",
@@ -17,7 +18,8 @@
         "string": "node --watch ./js/2-string.js",
         "number": "node --watch ./js/1-number.js",
         "js": "node --watch ./index.js",  
-   "biggest-number": "node --watch ./task/biggest-number.js",
+   "valid-name": "node --watch ./task/valid-name.js",
+        "biggest-number": "node --watch ./task/biggest-number.js",
         "string-reverse": "node --watch ./task/string-reverse.js",
         "interval-count": "node --watch ./task/interval-count.js",
         "adult": "node --watch ./task/adult.js",
