--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Pirmasis projektas apie JS",
   "main": "index.js",
   "scripts": {
- "Nd":"node --watch ./js/99-ND.js",
-    "method-string": "node --watch ./js/11-method-string.js",
+     "method-number": "node --watch ./js/12-method-number.js",
+    "Nd":"node --watch ./js/99-ND.js",
+  "method-string": "node --watch ./js/11-method-string.js",
     "math": "node --watch ./js/10-math.js",
     "object": "node --watch ./js/9-object.js",
     "for": "node --watch ./js/8-for.js",
