--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Pirmasis projektas apie JS",
   "main": "index.js",
   "scripts": {
-     "method-number": "node --watch ./js/12-method-number.js",
+    "method-array": "node --watch ./js/13-method-array.js",
+    "method-number": "node --watch ./js/12-method-number.js",
     "Nd":"node --watch ./js/99-ND.js",
   "method-string": "node --watch ./js/11-method-string.js",
     "math": "node --watch ./js/10-math.js",
@@ -20,7 +21,8 @@
         "number": "node --watch ./js/1-number.js",
         "js": "node --watch ./index.js",  
    "valid-name": "node --watch ./task/valid-name.js",
-        "biggest-number": "node --watch ./task/biggest-number.js",
+   "money-format": "node --watch ./task/money-format.js",    
+   "biggest-number": "node --watch ./task/biggest-number.js",
         "string-reverse": "node --watch ./task/string-reverse.js",
         "interval-count": "node --watch ./task/interval-count.js",
         "adult": "node --watch ./task/adult.js",
