--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Pirmasis projektas apie JS",
   "main": "index.js",
   "scripts": {
+    "arrow": "node --watch ./js/14-arrow.js",
     "method-array": "node --watch ./js/13-method-array.js",
     "method-number": "node --watch ./js/12-method-number.js",
     "Nd":"node --watch ./js/99-ND.js",
@@ -20,7 +21,8 @@
         "string": "node --watch ./js/2-string.js",
         "number": "node --watch ./js/1-number.js",
         "js": "node --watch ./index.js",  
-   "valid-name": "node --watch ./task/valid-name.js",
+  "fancy-math": "node --watch ./task/fancy-math.js",
+        "valid-name": "node --watch ./task/valid-name.js",
    "money-format": "node --watch ./task/money-format.js",    
    "biggest-number": "node --watch ./task/biggest-number.js",
         "string-reverse": "node --watch ./task/string-reverse.js",
