--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Pirmasis projektas apie JS",
   "main": "index.js",
   "scripts": {
+  "for-in": "node --watch ./js/18-for-in.js",
+    "while": "node --watch ./js/17-while.js",
+    "for-of": "node --watch ./js/16-for-of.js",
     "arrow": "node --watch ./js/14-arrow.js",
+    "ternary": "node --watch ./js/15-ternary.js",
     "method-array": "node --watch ./js/13-method-array.js",
     "method-number": "node --watch ./js/12-method-number.js",
     "Nd":"node --watch ./js/99-ND.js",
@@ -21,7 +25,8 @@
         "string": "node --watch ./js/2-string.js",
         "number": "node --watch ./js/1-number.js",
         "js": "node --watch ./index.js",  
-  "fancy-math": "node --watch ./task/fancy-math.js",
+  "names": "node --watch ./task/names-split-join.js",
+        "fancy-math": "node --watch ./task/fancy-math.js",
         "valid-name": "node --watch ./task/valid-name.js",
    "money-format": "node --watch ./task/money-format.js",    
    "biggest-number": "node --watch ./task/biggest-number.js",
