--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Pirmasis projektas apie JS",
   "main": "index.js",
   "scripts": {
-  "for-in": "node --watch ./js/18-for-in.js",
+  "tritaskis": "node --watch ./js/21-destrukturizavimas-rest.js",
+    "reduce": "node --watch ./js/20-reduce.js",
+    "sort": "node --watch ./js/19-sort.js",
+    "for-in": "node --watch ./js/18-for-in.js",
     "while": "node --watch ./js/17-while.js",
     "for-of": "node --watch ./js/16-for-of.js",
     "arrow": "node --watch ./js/14-arrow.js",
