--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Pirmasis projektas apie JS",
   "main": "index.js",
   "scripts": {
-  "tritaskis": "node --watch ./js/21-destrukturizavimas-rest.js",
+  "switch": "node --watch ./js/22-switch.js",
+    "tritaskis": "node --watch ./js/21-destrukturizavimas-rest.js",
     "reduce": "node --watch ./js/20-reduce.js",
     "sort": "node --watch ./js/19-sort.js",
     "for-in": "node --watch ./js/18-for-in.js",
